--- a/Frontend_React_native/package.json
+++ b/Frontend_React_native/package.json
@@ -10,16 +10,20 @@
     "test": "jest"
   },
   "dependencies": {
+    "@firebase/storage": "^0.11.2",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-firebase/app": "^18.3.2",
+    "@react-native-firebase/app": "^18.4.0",
     "@react-native-firebase/auth": "^18.3.2",
     "@react-native-firebase/firestore": "^18.3.2",
+    "@react-native-firebase/storage": "^18.4.0",
+    "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gesture-handler": "^2.12.1",
+    "react-native-image-picker": "^7.0.0",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^4.7.2",
